# airlock

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
adapters/claude-code/: guard_core
adapters/claude-code/.claude-plugin/: plugin.json
adapters/claude-code/commands/: airlock-setup.md  scan.md
adapters/claude-code/hooks/: airlock-python.sh  bootstrap.py  check_alignment.py  egress_gate.py  hooks.json  mcp_vet.py  memory_gate.py  scan_bash_output.py  scan_input.py
adapters/claude-code/skills/airlock/: SKILL.md
adapters/openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
adapters/openclaw/src/: config.ts  core-client.ts  entry.ts  guard.ts  hooks.ts  index.ts  openclaw-sdk.d.ts
adapters/openclaw/test/: redteam_probe.ts  roundtrip.ts
docs/: AGENTDOJO-eval.md  DISTRIBUTION.md  INJECTION-BYPASS-survey.md  REDTEAM-openclaw.md  SMOKE_TEST.md  marketplace-entry.json
guard_core/: __init__.py  bash_ingress.py  cli.py  config.py  egress.py  heuristics.py  installer.py  mcp_vetting.py  memory_guard.py  multimodal.py  normalize.py  scanners.py  server.py  trace.py  verdict.py
tests/: eval_align.py  eval_stage2.py  injection_battery.py  run_all.py  test_alignment.py  test_bash_ingress.py  test_core.py  test_egress.py  test_installer.py  test_mcp.py  test_more.py  test_persistence.py  test_redteam_fixes.py  test_server.py  test_stage2.py
tests/fixtures/: poisoned.html
