[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "airlock-guard-core"
version = "0.2.3"
description = "Layered, harness-agnostic prompt-injection / agent-security guard core (ingress, action, egress, persistence, supply-chain)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "airlock contributors" }]
keywords = ["prompt-injection", "llm-security", "agent-security", "ascii-smuggling", "guardrails"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Iskz17/airlock"
Repository = "https://github.com/Iskz17/airlock"
Issues = "https://github.com/Iskz17/airlock/issues"

# Stages 0, 1 and 4 run on the standard library alone. The heavier detectors are
# opt-in so the base install stays tiny and fully offline.
[project.optional-dependencies]
# llamafirewall pins huggingface-hub with no upper bound, but its code imports
# HfFolder (removed in hf_hub 1.0) — so a bare install breaks. Pin to the verified
# working floor. Stage 2 ALSO needs an HF token + acceptance of the gated
# meta-llama Prompt Guard 2 license at runtime (else it fails open).
promptguard = ["llamafirewall", "huggingface_hub==0.30.2", "transformers==4.51.3"]
pii = ["presidio-analyzer", "presidio-anonymizer"]  # Stage 4: richer PII egress
ocr = ["pytesseract", "Pillow"]                     # Stage 2b: multimodal image OCR
mcp = ["snyk-agent-scan"]                           # Stage 6: MCP supply-chain enrichment (was mcp-scan)
all = ["llamafirewall", "huggingface_hub==0.30.2", "transformers==4.51.3",
       "presidio-analyzer", "presidio-anonymizer", "pytesseract", "Pillow", "snyk-agent-scan"]

[project.scripts]
airlock-scan = "guard_core.cli:main"
airlock-setup = "guard_core.installer:main"

[tool.setuptools]
packages = ["guard_core"]
