[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "airlock-guard-core"
version = "0.3.0"
description = "Layered, harness-agnostic prompt-injection / agent-security guard core (ingress, action, egress, persistence, supply-chain)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "airlock contributors" }]
keywords = ["prompt-injection", "llm-security", "agent-security", "ascii-smuggling", "guardrails"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Iskz17/airlock"
Repository = "https://github.com/Iskz17/airlock"
Issues = "https://github.com/Iskz17/airlock/issues"

# Stages 0, 1 and 4 run on the standard library alone. The heavier detectors are
# opt-in so the base install stays tiny and fully offline.
[project.optional-dependencies]
# Stage 2 default is an UNGATED open classifier (no HF login/license) — just needs
# torch+transformers. `all` is the fully ungated set.
promptguard = ["torch", "transformers", "sentencepiece"]   # Stage 2: open prompt-injection classifier
pii = ["presidio-analyzer", "presidio-anonymizer"]         # Stage 4: richer PII egress
ocr = ["pytesseract", "Pillow"]                            # Stage 2b: multimodal image OCR
mcp = ["snyk-agent-scan"]                                  # Stage 6: MCP supply-chain enrichment (was mcp-scan)
all = ["torch", "transformers", "sentencepiece", "presidio-analyzer",
       "presidio-anonymizer", "pytesseract", "Pillow", "snyk-agent-scan"]
# Opt-in, NOT in `all`: Meta Prompt Guard 2 backend (gated HF model) + Stage 3
# AlignmentCheck. llamafirewall imports HfFolder (removed in hf_hub>=1.0) yet pins
# it unbounded, so pin to its verified floor.
llamafirewall = ["llamafirewall", "huggingface_hub==0.30.2", "transformers==4.51.3"]

[project.scripts]
airlock-scan = "guard_core.cli:main"
airlock-setup = "guard_core.installer:main"

[tool.setuptools]
packages = ["guard_core"]
